Updated question engine to give questions based on images